# dnora-cmems

./: README.md  environment.yml  pyproject.toml
dnora_cmems/: cmems_read_functions.py
dnora_cmems/modelrun/: __init__.py  templates.py
dnora_cmems/waterlevel/: __init__.py  waterlevel_readers.py
tests/test_initialization/: test_modelrun.py  test_waterlevel.py
