[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
version = "v0.1.0"
name = "dnora-cmems"
description = "Add-on to dnora: Access to Copernicus Marine Service (CMEMS) weather products"
authors = [ { name = "Konstantinos Christakos", email = "konstantinosc@met.no"}, { name = "Jan-Victor Björkqvist", email = "janvb@met.no" } ]
urls = {homepage = "https://github.com/MET-OM/dnora", download = "https://github.com/MET-OM/dnora"}
requires-python = ">=3.9, <3.11"
dependencies = [
    "dnora>=2.0.4",
    "copernicusmarine"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
test = ["pytest>=7.0"]



[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "dnora_cmems/_version.py"
